_sass/pages/_single-news.scss
.single-news-content{
	header{
		padding: 20px 0;
		.news-image{
			text-align:center;
			img{
				max-width: 700px;
				width: 100%;
			}
		}
	}
	.news-content{
		padding-bottom:50px;
		h1{
			color:#0087cd;
		}
	}
}

